openshift,k8s/lab5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-website
  template:
    metadata:
      labels:
        app: static-website
    spec:
      containers:
      - name: nginx
        image: docker.io/ahmedmaher07/website
        ports:
        - containerPort: 80
